:pencil: updating the new page and correcting infos

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,7 +30,7 @@ extra:
       link: https://www.linkedin.com/in/lister-ogusuku-ribeiro-6a1052148/
 
 # Copyright
-copyright: 'Copyright &copy; 2019 / Prof. Rafael Corsi / rafael.corsi@insper.edu.br'
+copyright: 'Layout Copyright &copy; 2019 by Prof. Rafael Corsi / rafael.corsi@insper.edu.br | Written material Copyright &copy; 2023 by Lister Ogusuku Ribeiro / listeror@al.insper.edu.br'
 
 # repo
 docs_dir: docs-src
