--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,23 @@ website/node_modules
 *.test
 *.iml
 
+# Local .terraform directories
+**/.terraform/*
+**__pycache__/
+
+# .tfstate files
+*.terraform
+*.tfstate
+*.tfstate.*
+*.hcl
+
+#env files
+.env
+venv
+# Crash log files
+crash.log
+crash.*.log
+
 website/vendor
 
 # Test exclusions
